# fjpeg

./: CMakeLists.txt  LICENSE  README.md
src/: fjpeg.cpp  fjpeg.h  fjpeg_bitstream.h  fjpeg_cli.cpp  fjpeg_global.h  fjpeg_huffman.cpp  fjpeg_huffman.h  fjpeg_transquant.cpp  fjpeg_transquant.h
